Source/cmComputeLinkDepends.cxx
@@ -26,6 +26,7 @@
 #include "cmMakefile.h"
 #include "cmMessageType.h"
 #include "cmRange.h"
+#include "cmSourceFile.h"
 #include "cmStateTypes.h"
 #include "cmStringAlgorithms.h"
 #include "cmTarget.h"
@@ -318,6 +319,9 @@ cmComputeLinkDepends::Compute()
 {
   // Follow the link dependencies of the target to be linked.
   this->AddDirectLinkEntries();
+
+  // Add dependencies on targets named by $<TARGET_OBJECTS:...> sources.
+  this->AddTargetObjectEntries();
 
   // Complete the breadth-first search of dependencies.
   while (!this->BFSQueue.empty()) {
@@ -698,6 +702,21 @@ void cmComputeLinkDepends::AddDirectLinkEntries()
   }
   for (cmLinkItem const& wi : impl->WrongConfigLibraries) {
     this->CheckWrongConfigItem(wi);
+  }
+}
+
+void cmComputeLinkDepends::AddTargetObjectEntries()
+{
+  std::vector<cmSourceFile const*> externalObjects;
+  this->Target->GetExternalObjects(externalObjects, this->Config);
+  for (auto const* externalObject : externalObjects) {
+    std::string const& objLib = externalObject->GetObjectLibrary();
+    if (objLib.empty()) {
+      continue;
+    }
+    cmLinkItem const& objItem =
+      this->Target->ResolveLinkItem(BT<std::string>(objLib));
+    this->AddLinkObject(objItem);
   }
 }
 
